# gpx_analysis

./: .gitignore  CMakeLists.txt  CONTEXT.md  README.md
src/: gpx_reader.cpp  gpx_reader.h  main.cpp  wind.cpp  wind.h
